@@ -6,6 +6,11 @@ Changes
 0.5.0
 =====
 
+- task parameter 'clean' == True, cleans empty folders, and display warning for non-empty folders
+- added command line option --continue. Execute all tasks even if tasks fails
+- added command line option --reporter to select result output reporter
+- added executed-only reporter
+- added json reporter
 
 
 0.4.0 (*2009-10-05*)
